--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -1,16 +1,37 @@
 .contacts {
     padding: 52px 80px 70px;
     border-radius: 15px;
+
+    @media (max-width: 820px) {
+        padding: 52px 40px 70px;
+    }
+    @media (max-width: 480px) {
+        padding: 45px 15px;
+    }
     &__container {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 80px;
+        @media (max-width: 1150px) {
+            grid-template-columns: 1fr;
+            gap: 40px;
+        }
     }
 
     &__left {
         display: grid;
         grid-template-rows: max-content;
         gap: 30px 100px;
+
+        @media (max-width: 1150px) {
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            justify-content: space-between;
+        }
+
+        @media (max-width: 480px) {
+            grid-template-columns: 1fr;
+        }
     }
 
     &__block {
@@ -72,6 +93,10 @@
         align-self: end;
         overflow: hidden;
         height: 341px;
+        @media (max-width: 480px) {
+            grid-column: initial;
+            height: 200px;
+        }
     }
 
     &__right {
