--- a/src/scss/personal.scss
+++ b/src/scss/personal.scss
@@ -1,7 +1,13 @@
 .personal {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(345px, 375px));
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    @media (max-width: 1023px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 640px) {
+        grid-template-columns: 1fr;
+    }
 
     &__item {
         background: #ffffff;
@@ -12,11 +18,28 @@
         > *:not(.personal img) {
             margin-left: 45px;
             margin-right: 45px;
+            @media (max-width: 480px) {
+                margin-left: 29px;
+                margin-right: 29px;
+            }
         }
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        justify-items: center;
+        align-items: stretch;
+    }
+
+    img {
+        width: 100%;
+        height: 297px;
+        object-fit: cover;
+        object-position: top center;
+        @media (max-width: 620px) {
+            height: 380px;
+        }
+        @media (max-width: 480px) {
+            height: 297px;
+        }
     }
 
     &__name {
@@ -25,6 +48,7 @@
         line-height: 29px;
         margin-top: 27px;
         margin-bottom: 7px;
+        text-align: center;
     }
 
     &__post,
@@ -75,16 +99,17 @@
 
     &__email-show {
         display: none;
-        font-size: 18px;
-        line-height: 22px;
+        font-size: 15px;
+        line-height: 20px;
         text-align: center;
+        padding-bottom: 2px;
     }
 
     &__messangers {
-
         p {
             margin-bottom: 8px;
         }
+        align-self: end;
     }
 
     &__social {
